Windows host utilities 7.1

--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -37,7 +37,7 @@ Windows Unified Host Utilities 7.1 includes support for E-Series storage systems
 
 == Prerequisite
 
-Install the latest hotfixes before installing the Windows Host Utilities. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows Server 2022 with ONTAP] document for your specific configuration hotfix requirements.
+Install the latest hotfixes before installing the Windows Host Utilities. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html#verify-your-host-and-storage-system-configuration[Windows Unified Host Utilities 7.1] document for your specific configuration hotfix requirements.
 
 == Known issues
 
