--- a/index.adoc
+++ b/index.adoc
@@ -2,11 +2,11 @@
 layout: astra
 sidebar: sidebar
 permalink: index.html
-keywords: ontap, san, host, rhel, red, hat, linux, sles, suse, esxi, nvme, oracle, linux, windows, enterprise, fc, fcp, isci, aix, powervm, vios, centos, citrix, hp-ux, solaris, veritas
+keywords: ontap, san, host, rhel, red, hat, linux, sles, suse, esxi, nvme, oracle, linux, windows, enterprise, fc, fcp, isci, aix, powervm, vios, centos, citrix, hp-ux, solaris, veritas, cvo, cloud, volume, ontap, clients, configuration, FSx, instance, netapp
 summary: This content provides distribution-specific guidance on how to configure SAN clients connected to ONTAP storage.
 ---
 
-= ONTAP SAN host configuration
+= ONTAP SAN host and cloud client configuration
 :hardbreaks:
 :nofooter:
 :icons: font
