--- a/index.adoc
+++ b/index.adoc
@@ -6,7 +6,7 @@ keywords: ontap, san, host, rhel, red, hat, linux, sles, suse, esxi, nvme, oracl
 summary: This content provides distribution-specific guidance on how to configure SAN clients connected to ONTAP storage.
 ---
 
-= ONTAP SAN host and cloud client configuration
+= SAN hosts and cloud clients
 :hardbreaks:
 :nofooter:
 :icons: font
