--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -48,10 +48,10 @@ Before you install the Host Utilities, you must verify that the Host Utilities v
 .Steps
 
 . Check the supported configuration in the http://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool^].
-. Check the hotfixes required for the respective host on the SAN host Windows documentation (FCP and iSCSI).
+. Check the hotfixes required for the respective host on the SAN host Windows documentation.
 +
 [NOTE]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the Windows documents under the FCP and iSCSI Host configurations category to find the relevant hotfix information for earlier versions of Windows server.
+link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the Host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI or FCP license and start the target service.
 +
