--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -32,12 +32,21 @@ The Windows Unified Host Utilities 7.1 continues to support the following versio
 NetApp qualifies additional components between releases of the Host Utilities software. For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
 
-=== Features in this Host Utilities release
-Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 8.2 or later versions, and enhanced iSCSI timeouts for faster failover.
+== Features in this Host Utilities release
+Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
 
-== Prerequisite
+== Important cautions
 
-Install the latest hotfixes before installing the Windows Host Utilities. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html#verify-your-host-and-storage-system-configuration[Windows Unified Host Utilities 7.1] document for your specific configuration hotfix requirements.
+Before deploying the latest release of Windows Host Utilities, you must read the information available to help you identify and resolve issues that might affect the operation of your systems.
+
+For more information about an individual bug and to explore other bug-related tools, see link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^].
+
+
+=== Installing the required hotfixes
+To ensure a successful installation or upgrade of Windows Unified Host Utilities, you must install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
+
+Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[SAN host Windows documentation] for your specific configuration hotfix requirements.
+
 
 == Known issues
 
