--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -47,19 +47,18 @@ To ensure a successful installation or upgrade of Windows Unified Host Utilities
 
 Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[SAN host Windows documentation] for your specific configuration hotfix requirements.
 
-
 == Known issues
 
 Some unexpected and potentially undesired behaviors, as well as, in some cases, workarounds to avoid these behaviors, have been identified in this release. 
 
 [cols=3,options="header", cols= "10, 30, 30"]
 |===
-|NetApp Bug ID	|Title |Description
-|814244	|Running the linux_gos_timeout-install.sh script is no longer required on Hyper-V guests running Red Hat Enterprise Linux or SUSE Linux Enterprise Server |You are no longer required to run the `linux_gos_timeout-install.sh` script to change disk timeouts on Red Hat Enterprise Linux 5, Red Hat Enterprise Linux 6, or SUSE Linux Enterprise Server 11 Hyper-V guests because the default timeout settings are being used. The `linux_gos_timeout-install.sh` script that was included in previous versions of the Host Utilities is no longer included in the Windows Unified Host Utilities. Windows Unified Host Utilities 7.1 uses the default disk timeout settings.
-|342374 |iSCSI sessions do not reconnect after reboot with mixed IPv4 and IPv6 |In a multipath I/O (MPIO) configuration or multiple connections per session (MCS) configuration that has both IPv4 and IPv6 endpoints, some iSCSI sessions might fail to reconnect after rebooting the Windows host.
-To ensure that all of your iSCSI paths return after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
-|275185 | MCS is not supported with iSCSI software boot |When using iSCSI software boot with iSCSI multiple connections per session (MCS), the iSCSI boot leading connection cannot be protected. This can lead to disconnection from the boot LUN causing the host to crash.
-Microsoft does not support MCS for iSCSI software booted hosts. Use MPIO as the high availability solution. Note that mixing MPIO and MCS is not supported.
+|Title	|Description |Workaround
+|Running the linux_gos_timeout-install.sh script is no longer required on Hyper-V guests running Red Hat Enterprise Linux or SUSE Linux Enterprise Server |You are no longer required to run the `linux_gos_timeout-install.sh` script to change disk timeouts on Red Hat Enterprise Linux 5, Red Hat Enterprise Linux 6, or SUSE Linux Enterprise Server 11 Hyper-V guests because the default timeout settings are being used. The `linux_gos_timeout-install.sh` script that was included in previous versions of the Host Utilities is no longer included in the Windows Unified Host Utilities. Windows Unified Host Utilities 7.1 uses the default disk timeout settings.|NA
+|iSCSI sessions do not reconnect after reboot with mixed IPv4 and IPv6 |In a multipath I/O (MPIO) configuration or multiple connections per session (MCS) configuration that has both IPv4 and IPv6 endpoints, some iSCSI sessions might fail to reconnect after rebooting the Windows host.
+|To ensure that all of your iSCSI paths return after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
+|MCS is not supported with iSCSI software boot |When using iSCSI software boot with iSCSI multiple connections per session (MCS), the iSCSI boot leading connection cannot be protected. This can lead to disconnection from the boot LUN causing the host to crash.
+|Microsoft does not support MCS for iSCSI software booted hosts. Use MPIO as the high availability solution. Note that mixing MPIO and MCS is not supported.
 |===
 
 link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible.
