--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -58,7 +58,7 @@ You can download the compressed file containing the Host Utilities software pack
 +
 `# gunzip netapp_hpux_host_utilities_6.0_ia_pa.depot.gz`
 +
-The system places the extracted software in the directory to which you uncompressed the depot file.
+The system places the extracted software in the directory where you uncompressed the depot file.
 
 .	Install the software by entering the following command:
 +
