--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -30,7 +30,7 @@ The management software enables the SAN Tool kit commands to gather information 
 ** Emulex HBA - OneCommand Manager core application CLI
 ** Brocade HBA – Brocade Command Utility CLI
 
-RPM Packages “libhbaapi” & “libhbalinux” available for each Linux Distribution should be installed on the host OS.
+RPM Packages "libhbaapi" and "libhbalinux" available for each Linux Distribution should be installed on the host OS.
 
 == SAN Toolkit
 
