--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -15,7 +15,7 @@ summary: Release Notes for Solaris Host Utilities 6.2
 :imagesdir: ./media/
 
 [.lead]
-This release notes document contains the latest information for the Solaris Host Utilities 6.2, including updates about known problems and limitations, and configuring and managing your ONTAP storage systems.
+This release notes document contains the latest information for the Solaris Host Utilities 6.2, including updates about known problems, limitations, configuring and managing your ONTAP storage systems.
 
 The Release Notes document is updated when new information on using the Solaris Host Utilities becomes available.
 
