--- a/_include/hu/reuse_hu_enable_alua_steps.adoc
+++ b/_include/hu/reuse_hu_enable_alua_steps.adoc
@@ -1,5 +1,6 @@
 To Enable ALUA Handler, perform the following steps:
 
+.Steps
 .	Create a backup of the initrd-image.
 .	Append the following parameter value to the kernel for ALUA and non-ALUA to work:
 `rdloaddriver=scsi_dh_alua`
