--- a/_include/nvme/reuse_enabling_on_windows_init_host.adoc
+++ b/_include/nvme/reuse_enabling_on_windows_init_host.adoc
@@ -1,5 +1,6 @@
 Follow these steps to enable FC/NVMe on the Windows initiator host:
 
+.Steps
 . Install OneCommand Manager utility on the Windows host.
 
 . On each of the HBA initiator ports, set the following HBA driver parameters:
