--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -80,7 +80,7 @@ SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot d
 
 Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. The AIX environment of the Host Utilities use the AIX native multipathing solution, MPIO.
 
-For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
+For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor-supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
@@ -161,7 +161,7 @@ Following are some recommended parameter settings for NetApp ONTAP LUNs.  The cr
 
 == Recommended Settings for MetroCluster
 
-By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
+By default, the AIX operating system enforces a shorter I/O timeout when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
 
 == AIX support with SM-BC
 
