--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -134,7 +134,7 @@ up     primary  path3  fcs1    fc_aix_4     1
 
 == Recommended Settings
 
-Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The critical parameters for ONTAP LUN’s are set automatically after installing the NetApp Host Utilities Kit.
+Following are some recommended parameter settings for NetApp ONTAP LUNs.  The critical parameters for ONTAP LUNs are set automatically after installing the NetApp Host Utilities Kit.
 
 [cols=4*, options="header"]
 |===
@@ -162,7 +162,7 @@ Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The
 
 == Recommended Settings for MetroCluster
 
-By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
+By default, the AIX operating system enforces a shorter I/O timeout when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
 
 == AIX support with SM-BC
 
