--- a/overview.adoc
+++ b/overview.adoc
@@ -14,12 +14,12 @@ summary: This content provides distribution-specific guidance on how to configur
 :linkattrs:
 :imagesdir: ./media/
 
-This content provides host and version specific best practices to quickly configure SAN hosts connected to ONTAP storage.  
+This content provides host and version-specific best practices to quickly configure SAN hosts connected to ONTAP storage.  
 
 Your SAN hosts and ONTAP storage can reside either on-premises, in the cloud, or both.  
 
-NOTE: In a cloud environment, hosts are typically referred to as clients. All host specific information in this content also applies to cloud clients.
+NOTE: In a cloud environment, hosts are typically referred to as clients. All host-specific information in this content also applies to cloud clients.
 
-For example you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
+For example, you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
 
 Proper configuration is important for best performance and successful failover.  
